re PR c++/19964 (ICE on invalid member declaration)

PR c++/19964
	* stor-layout.c (place_field): Set DECL_FIELD_OFFSET and
	DECL_FIELD_BIT_OFFSET of FIELD_DECLs, even if they have an invalid
	type.
cp:
	* PR c++/19964
	* class.c (walk_subobject_offsets): Don't walk error_mark_node.
testsuite:
	PR c++/19964
	* g++.dg/parse/crash31.C: New.

From-SVN: r105296